<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_selector"
    tools:context=".DashboardActivity">


    <Button
        android:id="@+id/b_get_quotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name_get_quotes"
        android:textColor="@color/button_color_text"
        android:onClick="launchExplicitIntent"
        app:layout_constraintBottom_toTopOf="@+id/b_fav_quotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.Button"
        />

    <Button
        android:id="@+id/b_fav_quotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name_fav_quotes"
        android:textColor="@color/button_color_text"
        android:onClick="launchExplicitIntent"
        app:layout_constraintBottom_toTopOf="@+id/b_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_get_quotes"
        android:theme="@style/AppTheme.Button"/>

    <Button
        android:id="@+id/b_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name_settings"
        android:textColor="@color/button_color_text"
        android:onClick="launchExplicitIntent"
        app:layout_constraintBottom_toTopOf="@+id/b_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_fav_quotes"
        android:theme="@style/AppTheme.Button"/>

    <Button
        android:id="@+id/b_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name_about"
        android:textColor="@color/button_color_text"
        android:onClick="launchExplicitIntent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_settings"
        android:theme="@style/AppTheme.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>